@@ -121,6 +121,7 @@ com.vividsolutions.jump.workbench.ui.plugin.BeanShellPlugIn.BeanShell-Console = 
 com.vividsolutions.jump.workbench.ui.plugin.ClearSelectionPlugIn = Clear Selection
 com.vividsolutions.jump.workbench.ui.plugin.CloneWindowPlugIn = Clone Window
 com.vividsolutions.jump.workbench.ui.plugin.CombineSelectedFeaturesPlugIn = Combine Selected Features
+com.vividsolutions.jump.workbench.ui.plugin.CombineSelectedFeaturesPlugIn.invalid-multipolygon = MultiPolygon was not valid, a GeometryCollection has been returned
 com.vividsolutions.jump.workbench.ui.plugin.CopySchemaPlugIn = Copy Schema
 com.vividsolutions.jump.workbench.ui.plugin.DeleteAllFeaturesPlugIn = Delete All Features
 com.vividsolutions.jump.workbench.ui.plugin.DeleteSelectedItemsPlugIn = Delete Selected Items
