@@ -114,6 +114,7 @@ com.vividsolutions.jump.workbench.ui.plugin.BeanShellPlugIn.BeanShell-Console = 
 com.vividsolutions.jump.workbench.ui.plugin.ClearSelectionPlugIn = Zru\u0161it v\u00FDb\u011Br
 com.vividsolutions.jump.workbench.ui.plugin.CloneWindowPlugIn = Kop\u00EDrovat/klonovat okno
 com.vividsolutions.jump.workbench.ui.plugin.CombineSelectedFeaturesPlugIn = Spojit vybran\u00E9 geoprvky
+com.vividsolutions.jump.workbench.ui.plugin.CombineSelectedFeaturesPlugIn.invalid-multipolygon = \#T\:MultiPolygon was not valid, a GeometryCollection has been returned
 com.vividsolutions.jump.workbench.ui.plugin.CopySchemaPlugIn = Kop\u00EDrovat sch\u00E9ma
 com.vividsolutions.jump.workbench.ui.plugin.DeleteAllFeaturesPlugIn = Smazat v\u0161echny geoprvky
 com.vividsolutions.jump.workbench.ui.plugin.DeleteSelectedItemsPlugIn = Smazat vybran\u00E9 polo\u017Eky
