@@ -114,6 +114,7 @@ com.vividsolutions.jump.workbench.ui.plugin.BeanShellPlugIn.BeanShell-Console = 
 com.vividsolutions.jump.workbench.ui.plugin.ClearSelectionPlugIn = \u9078\u629E\u306E\u6D88\u53BB
 com.vividsolutions.jump.workbench.ui.plugin.CloneWindowPlugIn = \u30A6\u30A3\u30F3\u30C9\u30FC\u306E\u30AF\u30ED\u30FC\u30F3
 com.vividsolutions.jump.workbench.ui.plugin.CombineSelectedFeaturesPlugIn = \u9078\u629E\u30D5\u30A3\u30FC\u30C1\u30E3\u306E\u7D44\u307F\u5408\u308F\u305B
+com.vividsolutions.jump.workbench.ui.plugin.CombineSelectedFeaturesPlugIn.invalid-multipolygon = \#T\:MultiPolygon was not valid, a GeometryCollection has been returned
 com.vividsolutions.jump.workbench.ui.plugin.CopySchemaPlugIn = \#T\:Copy Schema
 com.vividsolutions.jump.workbench.ui.plugin.DeleteAllFeaturesPlugIn = \u3059\u3079\u3066\u306E\u30D5\u30A3\u30FC\u30C1\u30E3\u306E\u524A\u9664
 com.vividsolutions.jump.workbench.ui.plugin.DeleteSelectedItemsPlugIn = \u9078\u629E\u30A2\u30A4\u30C6\u30E0\u306E\u524A\u9664
