@@ -114,6 +114,7 @@ com.vividsolutions.jump.workbench.ui.plugin.BeanShellPlugIn.BeanShell-Console = 
 com.vividsolutions.jump.workbench.ui.plugin.ClearSelectionPlugIn = \u0B85\u0BB4\u0BBF  \u0BA4\u0BC7\u0BB0\u0BCD\u0BB5\u0BC1
 com.vividsolutions.jump.workbench.ui.plugin.CloneWindowPlugIn = \u0B95\u0BC1\u0BB3\u0BC7\u0BBE\u0BA9\u0BCD  \u0B9A\u0BBE\u0BB3\u0BB0\u0BAE\u0BCD
 com.vividsolutions.jump.workbench.ui.plugin.CombineSelectedFeaturesPlugIn = \u0B85\u0BAE\u0BCD\u0B9A\u0B99\u0BCD\u0B95\u0BB3\u0BCD  \u0B87\u0BA3\u0BC8
+com.vividsolutions.jump.workbench.ui.plugin.CombineSelectedFeaturesPlugIn.invalid-multipolygon = \#T\:MultiPolygon was not valid, a GeometryCollection has been returned
 com.vividsolutions.jump.workbench.ui.plugin.CopySchemaPlugIn = \#T\:Copy Schema
 com.vividsolutions.jump.workbench.ui.plugin.DeleteAllFeaturesPlugIn = \u0B85\u0BA9\u0BC8\u0BA4\u0BCD\u0BA4\u0BC1  \u0B85\u0BAE\u0BCD\u0B9A\u0B99\u0BCD\u0B95\u0BB3\u0BCD \u0B85\u0BB4\u0BBF\u0B95\u0BCD\u0B95\u0BB5\u0BC1\u0BAE\u0BCD
 com.vividsolutions.jump.workbench.ui.plugin.DeleteSelectedItemsPlugIn = \u0BA4\u0BC7\u0BB0\u0BCD\u0BB5\u0BC1 \u0B9A\u0BC6\u0BAF\u0BCD\u0BA4 \u0BAA\u0BC6\u0BBE\u0BB0\u0BC1\u0B9F\u0BCD\u0B95\u0BB3\u0BCD \u0B85\u0BB4\u0BBF\u0B95\u0BCD\u0B95\u0BB5\u0BC1\u0BAE\u0BCD
